@@ -17,10 +17,13 @@ clone properly.  Thanks to David Sainty.
 The $mech->back() can fail if there's nothing on the stack to go
 back to.  Thanks to Dave Page.
 
+$mech->follow_link() did not complain if a link could not be found,
+even with autocheck on.  Now it does.  Thanks, Flavio Poletti.
+
 [ENHANCEMENTS]
 Added a $mech->form_id() method so you can look up forms by ID.
 
-Added $mech->content_type, because $mech->ct is just too cryptic.
+Added $mech->content_type(), because $mech->ct() is too cryptic.
 
 
 1.51_02     Tue Nov 18 01:30:54 CST 2008
